# adventofcode

./: .gitignore  README.md  pyproject.toml
src/adventofcode/: __init__.py
src/adventofcode/2024/: __init__.py
src/adventofcode/2024/day_1/: __init__.py  part_2.py
src/adventofcode/2024/day_3/: part_1.py
src/adventofcode/year_2024/day_1/: input_data.json  part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_10/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_11/: generate_helper.py  part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_12/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_2/: __init__.py  input_data.json  part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_3/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_4/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_5/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_6/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_7/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_8/: part_1.py  part_2.py  utils.py
src/adventofcode/year_2024/day_9/: part_1.py  part_2.py  utils.py
